# camera-h7

./: .gitignore  CMakeLists.txt  README.md
doc/ffd/: ffd.ioc
src/: Dma.h  Mt9t112.cc  Mt9t112.h  Ov2640.cc  Ov2640.h  Ov3640.cc  Ov3640.h  camera.h  encode_dma.cc  encode_dma.h  etl_profile.h  image_320_240_rgb.h  jpeg_utils_conf.h  main.cc  ov2640.cc  ov2640.h  ov3640_regs.h  stm324x9i_eval.h  stm324x9i_eval_camera.cc  stm324x9i_eval_camera.h  stm32h7xx_hal_conf.h  stm32h7xx_it.c
src/communicationInterface/: AtCommandAction.cc  AtCommandAction.h
src/communicationInterface/esp8266/: Esp8266.cc  Esp8266.h  SendNetworkAction.cc  SendNetworkAction.h
test-app/test-app/: CMakeLists.txt  main.cc
